WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
118701
REGRESSION(
r152685
): svg/custom/xlink-prefix-in-attributes.html failed unexpectedly
https://bugs.webkit.org/show_bug.cgi?id=118701
Summary
REGRESSION(r152685): svg/custom/xlink-prefix-in-attributes.html failed unexpe...
Vicki Pfau
Reported
2013-07-15 20:16:55 PDT
The changeset
http://trac.webkit.org/changeset/152685
caused svg/custom/xlink-prefix-in-attributes.html to start failing reliably on Mac bots, e.g.:
http://build.webkit.org/results/Apple%20MountainLion%20Release%20WK1%20(Tests)/r152685%20(11322)/svg/custom/xlink-prefix-in-attributes-pretty-diff.html
Attachments
Patch
(2.30 KB, patch)
2013-07-16 05:49 PDT
,
Rob Buis
no flags
Details
Formatted Diff
Diff
Patch
(4.36 KB, patch)
2013-07-16 08:15 PDT
,
Rob Buis
rniwa
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Vicki Pfau
Comment 1
2013-07-15 20:31:35 PDT
Marked as failing in
r152699
Rob Buis
Comment 2
2013-07-16 05:49:16 PDT
Created
attachment 206768
[details]
Patch
Csaba Osztrogonác
Comment 3
2013-07-16 06:08:30 PDT
***
Bug 118724
has been marked as a duplicate of this bug. ***
Csaba Osztrogonác
Comment 4
2013-07-16 06:15:39 PDT
Comment on
attachment 206768
[details]
Patch Please unskip it on Qt and Mac too when you land this patch: -
http://trac.webkit.org/changeset/152714/trunk/LayoutTests/platform/qt/TestExpectations
-
http://trac.webkit.org/changeset/152699/trunk/LayoutTests/platform/mac/TestExpectations
Rob Buis
Comment 5
2013-07-16 08:15:18 PDT
Created
attachment 206783
[details]
Patch
Rob Buis
Comment 6
2013-07-17 09:46:10 PDT
Committed
r152785
: <
http://trac.webkit.org/changeset/152785
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug