[Mac] REGRESSION(r152685): svg/custom/xlink-prefix-in-attributes.html failed unexpectedly https://bugs.webkit.org/show_bug.cgi?id=118701

Reviewed by Ryosuke Niwa.

Source/WebCore:

Use the computed attribute prefix, otherwise href being in xlink namespace but not having any prefix
will cause outputting the xlink namespace in appendNamespace.

Patch fixes svg/custom/xlink-prefix-in-attributes.html.

* editing/MarkupAccumulator.cpp:
(WebCore::MarkupAccumulator::appendAttribute):

LayoutTests:

* platform/mac/TestExpectations:
* platform/qt/TestExpectations:

Canonical link: https://commits.webkit.org/136665@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152785 268f45cc-cd09-0410-ab3c-d52691b4dbfc